# data-structures-and-algorithms-in-haskell

./: .gitignore  LICENSE  README.md  data-structures-and-algorithms-in-haskell.cabal  haskell-examples.cabal  stack.yaml
src/csv-read/: Main.hs
src/exact-string-comparison-naive/: Main.hs
src/text-file-io/: Main.hs
src/z-blocks-counting/: Main.hs
